--- a/report/Dissertation.tex
+++ b/report/Dissertation.tex
@@ -152,7 +152,7 @@ Insert acknowledgements here
 \includepdf[pages=-]{interim}
 
 \section{Diary Sheets (or other project management evidence)}
-Insert diary sheets here together with any project management plan you have
+\includepdf[page=-]{diaries}
 
 \section{Appendix 4 and following}
 insert content here and for each of the other appendices, the title may be just on a page by itself, the pages of the appendices are not numbered, unless an included document such as a user manual or design document is itself pager numbered.
