--- a/report/Dissertation.tex
+++ b/report/Dissertation.tex
@@ -32,6 +32,7 @@
 % MY PACKAGES
 \usepackage{adjustbox}
 \usepackage{pdfpages}
+\usepackage{pgfplots}
 \usepackage{multicol}
 
 %header and footer settings
@@ -156,6 +157,16 @@ Insert acknowledgements here
 
 \section{Appendix 4 and following}
 insert content here and for each of the other appendices, the title may be just on a page by itself, the pages of the appendices are not numbered, unless an included document such as a user manual or design document is itself pager numbered.
+
+\section{Recall}
+\input{recall}
+
+\section{F1-Score}
+\input{f1score}
+
+\section{Precision}
+\input{precision}
+
 \end{appendices}
 
 \end{document}
