--- a/report/recall.tex
+++ b/report/recall.tex
@@ -1,4 +1,5 @@
-\begin{adjustbox}{height=0.68\paperheight, center=\textwidth}
+\begin{figure}[H]
+\begin{adjustbox}{height=0.64\paperheight, center=\textwidth}
 \begin{tikzpicture}
 \begin{axis}[
     xbar,
@@ -12,7 +13,7 @@
     nodes near coords,
     nodes near coords align={horizontal},
     width=1.2\textwidth,
-    height=\paperheight
+    height=0.8\paperheight
     ]
     \addplot coordinates {(0.92,k-NN) (0.95,MLP) (0.93,SVM) 
 	                  (0.90,k-NN/k-NN) (0.94,k-NN/MLP) (0.90,k-NN/SVM) 
@@ -34,3 +35,5 @@
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
+\caption{Classifiers Recall Graph}
+\end{figure}
