--- a/report/plots/f1score.tex
+++ b/report/plots/f1score.tex
@@ -1,5 +1,5 @@
 \begin{figure}[H]
-\begin{adjustbox}{height=0.60\paperheight, center=\textwidth}
+\begin{adjustbox}{height=0.64\paperheight, center=\textwidth}
 \begin{tikzpicture}
 \begin{axis}[
     xbar,
@@ -15,10 +15,6 @@
     width=1.2\textwidth,
     height=0.8\paperheight
     ]
-    \addplot coordinates {(0.92,k-NN) (0.95,MLP) (0.93,SVM) 
-	                  (0.90,k-NN/k-NN) (0.94,k-NN/MLP) (0.91,k-NN/SVM) 
-		          (0.89,MLP/k-NN) (0.94,MLP/MLP) (0.93,MLP/SVM) 
-		          (0.91,SVM/k-NN) (0.96,SVM/MLP) (0.93,SVM/SVM)};
     \addplot coordinates {(0.18,k-NN) (0.36,MLP) (0.45,SVM) 
 	                  (0.18,k-NN/k-NN) (0.23,k-NN/MLP) (0.29,k-NN/SVM) 
 		          (0.24,MLP/k-NN) (0.46,MLP/MLP) (0.45,MLP/SVM) 
@@ -27,11 +23,16 @@
 	                  (0.61,k-NN/k-NN) (0.54,k-NN/MLP) (0.58,k-NN/SVM) 
 		          (0.51,MLP/k-NN) (0.67,MLP/MLP) (0.68,MLP/SVM) 
 		          (0.48,SVM/k-NN) (0.54,SVM/MLP) (0.69,SVM/SVM)};
+    \addplot coordinates {(0.92,k-NN) (0.95,MLP) (0.93,SVM) 
+	                  (0.90,k-NN/k-NN) (0.94,k-NN/MLP) (0.91,k-NN/SVM) 
+		          (0.89,MLP/k-NN) (0.94,MLP/MLP) (0.93,MLP/SVM) 
+		          (0.91,SVM/k-NN) (0.96,SVM/MLP) (0.93,SVM/SVM)};
+
     \addplot coordinates {(0.89,k-NN) (0.98,MLP) (0.97,SVM) 
 	                  (0.89,k-NN/k-NN) (0.98,k-NN/MLP) (0.96,k-NN/SVM) 
 		          (0.89,MLP/k-NN) (0.98,MLP/MLP) (0.97,MLP/SVM) 
 		          (0.89,SVM/k-NN) (0.98,SVM/MLP) (0.96,SVM/SVM)};
-    \legend{dos,u2r,r2l,probe}
+        \legend{u2r,r2l,dos,probe}
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
