--- a/report/plots/precision.tex
+++ b/report/plots/precision.tex
@@ -15,10 +15,6 @@
     width=1.2\textwidth,
     height=0.8\paperheight
     ]
-    \addplot coordinates {(0.91,k-NN) (0.94,MLP) (0.93,SVM) 
-	                  (0.90,k-NN/k-NN) (0.94,k-NN/MLP) (0.93,k-NN/SVM) 
-		          (0.89,MLP/k-NN) (0.94,MLP/MLP) (0.93,MLP/SVM) 
-		          (0.90,SVM/k-NN) (0.94,SVM/MLP) (0.93,SVM/SVM)};
     \addplot coordinates {(0.17,k-NN) (0.38,MLP) (0.64,SVM) 
 	                  (0.18,k-NN/k-NN) (0.30,k-NN/MLP) (0.58,k-NN/SVM) 
 		          (0.33,MLP/k-NN) (0.49,MLP/MLP) (0.73,MLP/SVM) 
@@ -27,11 +23,17 @@
 	                  (0.73,k-NN/k-NN) (0.51,k-NN/MLP) (0.64,k-NN/SVM) 
 		          (0.51,MLP/k-NN) (0.71,MLP/MLP) (0.80,MLP/SVM) 
 		          (0.44,SVM/k-NN) (0.49,SVM/MLP) (0.83,SVM/SVM)};
+    \addplot coordinates {(0.91,k-NN) (0.94,MLP) (0.93,SVM) 
+	                  (0.90,k-NN/k-NN) (0.94,k-NN/MLP) (0.93,k-NN/SVM) 
+		          (0.89,MLP/k-NN) (0.94,MLP/MLP) (0.93,MLP/SVM) 
+		          (0.90,SVM/k-NN) (0.94,SVM/MLP) (0.93,SVM/SVM)};
+
     \addplot coordinates {(0.90,k-NN) (0.98,MLP) (0.99,SVM) 
 	                  (0.91,k-NN/k-NN) (0.98,k-NN/MLP) (0.96,k-NN/SVM) 
 		          (0.91,MLP/k-NN) (0.98,MLP/MLP) (0.97,MLP/SVM) 
 		          (0.91,SVM/k-NN) (0.98,SVM/MLP) (0.96,SVM/SVM)};
-        \legend{dos,u2r,r2l,probe}
+
+        \legend{u2r,r2l,dos,probe}
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
