--- a/report/Dissertation.tex
+++ b/report/Dissertation.tex
@@ -126,9 +126,45 @@ This section of the report will provide a high level description of the function
 \subsubsection{Product Perspective}
 \subsubsection{Product Functions}
 \subsubsection{User Characteristics}
+This software is primarily focused towards researchers and students interested in comparing machine learning classification algorithms with a single stage against those with multiple stages. The software may be used by them in order to quickly make comparisons between different configurations of classifiers and to assess the effectiveness of these configurations. They will be able to enter their own datasets and classifiers and receive results in a standard format, and to view these results in a graph.
 \subsubsection{Operating Environment}
+In order to run the software the following requirements must be met:
+\begin{itemize}
+	\item{Python 3.6.4+ with the following packages:}
+	\begin{itemize}
+		\item{NumPy 1.14.0+}
+		\item{Pandas 0.22.0+}
+		\item{Pandas-ml 0.5.0+}
+		\item{Scikit-learn 0.19.1+}
+		\item{PyQt 5.9.1+}
+	\end{itemize}
+\item{One of the following operating systems:}
+	\begin{itemize}
+		\item{Windows 7 (x86) or greater}
+		\item{macOS 10.11 or greater}
+		\item{Linux with X11}
+	\end{itemize}
+	\item{A system capable of running one of the above operating systems.}
+\end{itemize}
+
 \subsection{Specific Requirements}
 \subsubsection{User Interface}
+\begin{figure}[H]
+	\makebox[\textwidth][c]{\includegraphics[width=\textwidth, center]{figures/Mainwindow.pdf}}
+\caption{Main Window Result Tab Wireframe}
+\label{mainwf}
+\end{figure}
+\begin{figure}[H]
+	\makebox[\textwidth][c]{\includegraphics[width=\textwidth, center]{figures/mainwindowgraph.pdf}}
+\caption{Main Window Graph Tab Wireframe}
+\label{graphwf}
+\end{figure}
+\begin{figure}[H]
+	\makebox[\textwidth][c]{\includegraphics[width=\textwidth, center]{figures/datasetwindow.pdf}}
+\caption{Dataset Window Wireframe}
+\label{datasetwf}
+\end{figure}
+
 \subsubsection{Functional Requirements}
 \paragraph{FR1 - Select Classifiers}
 \textbf{ID:} FR1 \\
@@ -136,9 +172,9 @@ This section of the report will provide a high level description of the function
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
 \textbf{DEP:} N/A
-\paragraph{FR2 - Select Two Stage Classification}
+\paragraph{FR2 - Two Stage Classification}
 \textbf{ID:} FR2 \\
-\textbf{TITLE:} Select Two Stage Classification \\
+\textbf{TITLE:} Two Stage Classification \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
 \textbf{DEP:} N/A
@@ -153,7 +189,7 @@ This section of the report will provide a high level description of the function
 \textbf{TITLE:} Create New Classifier \\
 \textbf{PRIORITY:} Low \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR5 - Debug Output}
 \textbf{ID:} FR5 \\
 \textbf{TITLE:} Debug Output \\
@@ -171,97 +207,97 @@ This section of the report will provide a high level description of the function
 \textbf{TITLE:} Aggregate Results by Attack \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} FR3
 \paragraph{FR8 - Write Results to File}
 \textbf{ID:} FR8 \\
-\textbf{TITLE:} Some name \\
+\textbf{TITLE:} Write Results to File \\
 \textbf{PRIORITY:} Medium \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR9 - Get Classification Results}
 \textbf{ID:} FR9 \\
 \textbf{TITLE:} Get Classification Results \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} FR3
 \paragraph{FR10 - Graph Results}
 \textbf{ID:} FR10 \\
 \textbf{TITLE:} Graph Results \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} FR9
 \paragraph{FR11 - Select Training Dataset}
 \textbf{ID:} FR11 \\
 \textbf{TITLE:} Select Training Dataset \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR12 - Select Testing Dataset}
 \textbf{ID:} FR12 \\
 \textbf{TITLE:} Select Testing Dataset \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR13 - k-Fold Cross Validation}
 \textbf{ID:} FR13 \\
 \textbf{TITLE:} k-Fold Cross Validation \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} FR11
 \paragraph{FR14 - Select Dataset Column Labels}
 \textbf{ID:} FR14 \\
 \textbf{TITLE:} Select Dataset Column Labels \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR15 - Select Dataset Attack Categories}
 \textbf{ID:} FR15 \\
 \textbf{TITLE:} Select Dataset Attack Categories \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR16 - Categorise Dataset Fields}
 \textbf{ID:} FR16 \\
 \textbf{TITLE:} Categorise Dataset Fields \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} FR14
 \paragraph{FR17 - One Hot Encoding}
 \textbf{ID:} FR17 \\
 \textbf{TITLE:} One Hot Encoding \\
 \textbf{PRIORITY:} High \\
-\textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DESC:}  \\
+\textbf{DEP:} FR18
 \paragraph{FR18 - Load Data}
 \textbf{ID:} FR18 \\
 \textbf{TITLE:} Load Data \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} FR11, FR12, FR14, FR15
 \paragraph{FR19 - k-Nearest Neighbour Classifier}
 \textbf{ID:} FR19 \\
 \textbf{TITLE:} k-Nearest Neighbour Classifier \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR20 - Multi-layer Perceptron Classifier}
 \textbf{ID:} FR20 \\
 \textbf{TITLE:} Multi-layer Perceptron Classifier \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR21 - Negative Selection Classifier}
 \textbf{ID:} FR21 \\
 \textbf{TITLE:} Negative Selection Classifier \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR22 - Support Vector Machine Classifier}
 \textbf{ID:} FR22 \\
 \textbf{TITLE:} Support Vector Machine Classifier \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} FR1, FR2
+\textbf{DEP:} N/A
 \paragraph{FR23 - Stochastic Classifier Averaging}
 \textbf{ID:} FR23 \\
 \textbf{TITLE:} Stochastic Classifier Averaging \\
@@ -281,37 +317,31 @@ This section of the report will provide a high level description of the function
 \textbf{TITLE:} Robustness \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} N/A
 \paragraph{QR2 - Responsiveness} 
 \textbf{ID:} QR2 \\
 \textbf{TITLE:} Responsiveness \\
 \textbf{PRIORITY:} Medium \\
 \textbf{DESC:} UI should not hang during stuff.   \\
-\textbf{DEP:} N/A
 \paragraph{QR3 - Usability}
 \textbf{ID:} QR3 \\
 \textbf{TITLE:} Usability \\
 \textbf{PRIORITY:} Medium \\
 \textbf{DESC:}   \\
-\textbf{DEP:} N/A
 \paragraph{QR4 - Maintainability}
 \textbf{ID:} QR4 \\
 \textbf{TITLE:} Maintainability \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:}   \\
-\textbf{DEP:} N/A
 \paragraph{QR5 - Portability}
 \textbf{ID:} QR5 \\
 \textbf{TITLE:} Portability \\
 \textbf{PRIORITY:} Low \\
 \textbf{DESC:} Work on different systems and OS's  \\
-\textbf{DEP:} N/A
 \paragraph{QR6 - Correctness}
 \textbf{ID:} QR6  \\
 \textbf{TITLE:} Correctness \\
 \textbf{PRIORITY:} High \\
 \textbf{DESC:} Results MUST be correct.   \\
-\textbf{DEP:} N/A
 \subsection{Design}
 \subsection{Implementation}
 \subsection{Testing}
