--- a/report/Dissertation.tex
+++ b/report/Dissertation.tex
@@ -37,6 +37,7 @@
 \usepackage{multicol}
 \usepackage{float}
 \usepackage{blindtext}
+\usepackage{longtable}
 
 \makeatletter
 \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
@@ -136,6 +137,8 @@ In order to run the software the following requirements must be met:
 		\item{Pandas 0.22.0+}
 		\item{Pandas-ml 0.5.0+}
 		\item{Scikit-learn 0.19.1+}
+		\item{Scipy 1.0.0}
+		\item{Matplotlib 2.1.1+}
 		\item{PyQt 5.9.1+}
 	\end{itemize}
 \item{One of the following operating systems:}
@@ -345,6 +348,7 @@ In order to run the software the following requirements must be met:
 \subsection{Design}
 \subsection{Implementation}
 \subsection{Testing}
+\input{tables/testcase.tex}
 \subsection{Documentation}
 \subsection{Evaluation}
 
