Boring report stuff

--- a/report/Dissertation.tex
+++ b/report/Dissertation.tex
@@ -433,6 +433,11 @@ In order to run the software the following requirements must be met:
 
 \newpage
 
+\section{UNSW-NB15 Precision}
+\input{plots/precisionUNSW}
+
+\newpage
+
 \end{appendices}
 
 \end{document}
